refactor: code refactoring

--- a/projects/project_01_browser/index.html
+++ b/projects/project_01_browser/index.html
@@ -1,53 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drink Browser</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-</head>
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-
+  <body>
     <div class="wrapper">
-        <div class="header">
-            <div class="shadow"></div>
-            <h1>DrinkSearch</h1>
-            <input type="text" class="search" placeholder="Enter the name of the drink">
-        </div>
+      <div class="header">
+        <div class="shadow"></div>
+        <h1>DrinkSearch</h1>
+        <input
+          type="text"
+          class="search"
+          placeholder="Enter the name of the drink"
+        />
+      </div>
 
-        <div class="drink-list">
-            <h2>List of drinks:</h2>
-            <ul>
-                <li>Mojito</li>
-                <li>Margarita</li>
-                <li>Cosmopolitan</li>
-                <li>Piña Colada</li>
-                <li>Martini</li>
-                <li>Caipirinha</li>
-                <li>Long Island Iced Tea</li>
-                <li>Daiquiri</li>
-                <li>Manhattan</li>
-                <li>Old Fashioned</li>
-                <li>Negroni</li>
-                <li>Whisky Sour</li>
-                <li>Sangria</li>
-                <li>Mai Tai</li>
-                <li>Bloody Mary</li>
-                <li>Gin and Tonic</li>
-                <li>Tequila Sunrise</li>
-                <li>Sex on the Beach</li>
-                <li>White Russian</li>
-                <li>French 75</li>
-            </ul>
-        </div>
+      <div class="drink-list">
+        <h2>List of drinks:</h2>
+        <ul>
+          <li>Mojito</li>
+          <li>Margarita</li>
+          <li>Cosmopolitan</li>
+          <li>Piña Colada</li>
+          <li>Martini</li>
+          <li>Caipirinha</li>
+          <li>Long Island Iced Tea</li>
+          <li>Daiquiri</li>
+          <li>Manhattan</li>
+          <li>Old Fashioned</li>
+          <li>Negroni</li>
+          <li>Whisky Sour</li>
+          <li>Sangria</li>
+          <li>Mai Tai</li>
+          <li>Bloody Mary</li>
+          <li>Gin and Tonic</li>
+          <li>Tequila Sunrise</li>
+          <li>Sex on the Beach</li>
+          <li>White Russian</li>
+          <li>French 75</li>
+        </ul>
+      </div>
     </div>
 
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
